# cvista

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build-fvtk.sh  pyproject.toml  shell.nix
.github/workflows/: _tier-wheels.yml  bitexact.yml  ci.yml  pyvista-bump.yml  release-tiers.yml  sdk.yml  smp-parity-stress.yml  smp-parity.yml  wheels-cibuildwheel.yml  wheels-legacy.yml  wheels-macos.yml  wheels-manylinux217.yml  wheels-test.yml  wheels-windows.yml  wheels.yml
.gitlab/: upload.yml
CMake/: VTKcppcheckSuppressions.txt  setup.py.in  vtkModule.cmake  vtkModuleWrapPython.cmake  vtkWheelPreparation.cmake  vtkWrapSettings.cmake
CMake/wheel_sdks/: CMakeLists.txt  README.md  pyproject.toml.in
Common/Core/: CMakeLists.txt  vtk.module  vtkCreateArrayDispatchArrayList.cmake  vtkDataArrayTupleRange_AOS.h  vtkDataArrayTupleRange_Generic.h  vtkDataArrayValueRange_AOS.h  vtkDataArrayValueRange_Generic.h  vtkFVTKAllocator.cxx  vtkFVTKSMPDefaults.cxx  vtkFVTKSMPDefaults.h  vtkGenericDataArray.txx  vtkGenericDataArrayValueRangeInstantiate.cxx.in  vtkSMPTools.cxx  vtkSMPTools.h  vtkTypeArrays.cmake
Common/DataModel/: vtkCellArray.cxx  vtkCellArray.h  vtkExplicitStructuredGrid.cxx  vtkImplicitFunction.cxx  vtkPolyData.cxx  vtkPolyPlane.cxx  vtkStaticFaceHashLinksTemplate.txx  vtkStaticPointLocatorPrivate.h  vtkUnstructuredGrid.cxx  vtkUnstructuredGridCellIterator.cxx
Common/Math/: vtkReservoirSampler.h
Common/Transforms/: CMakeLists.txt  vtkAbstractTransform.cxx  vtkHomogeneousTransform.cxx  vtkLinearTransform.cxx
Filters/Core/: CMakeLists.txt  fvtkFastClean.cxx  fvtkFastClean.h  fvtkFastClipPoly.cxx  fvtkFastClipPoly.h  fvtkFastConnectivity.cxx  fvtkFastDecimate.cxx  fvtkFastOrient.cxx  fvtkFastOrient.h  pvaClean.h  pvaHash96.h  pvaLinearProbeTable.h  pvaOrient.h  pvaParallelRadixSort.h  vtkBinnedDecimation.cxx  vtkBinnedDecimation.h  vtkCellDataToPointData.cxx  vtkCleanPolyData.cxx  vtkClipPolyData.cxx  vtkConnectivityFilter.cxx  vtkContourFilter.cxx  vtkContourHelper.cxx  vtkContourHelper.h  vtkDecimatePro.cxx  vtkElevationFilter.cxx  vtkExtractCells.cxx  vtkFeatureEdges.cxx  vtkFlyingEdges3D.cxx  vtkGlyph3D.cxx  vtkMultiObjectMassProperties.cxx  vtkMultiObjectMassProperties.h  vtkOrientPolyData.cxx  vtkPointDataToCellData.cxx  vtkPolyDataEdgeNeighbors.h  vtkPolyDataNormals.cxx  vtkQuadricClustering.cxx  vtkQuadricClustering.h  vtkQuadricDecimation.cxx  vtkQuadricDecimation.h  vtkSmoothPolyDataFilter.cxx  (+9 more)
Filters/Extraction/: vtkExtractCellsByType.cxx  vtkExtractCellsByType.h  vtkExtractPolyDataGeometry.cxx  vtkExtractPolyDataGeometry.h  vtkExtractUnstructuredGrid.cxx  vtkExtractUnstructuredGrid.h
IO/Exodus/: vtk.kit  (+1 more)
ci/: BLACKSMITH.md  bitexact_in_container.sh  build-sdk.sh  build-wheels-linux.sh  check-no-alloc-exports.sh  prune_setup_py.py  run-bitexact.sh  run-cibuildwheel-linux.sh  run-pyvista.sh  run-regression.sh  run-renderexact.sh  run-smp-parity-stress.sh  run-smp-parity.sh  smoke_in_container.sh  smoke_min.py  smoke_test.py  test-sdk.sh
cvista-config/: _modules_minimal.cmake  _nocompile_classes.cmake  _nowrap_classes.cmake  minimal.cmake  tiered.cmake
cvista-validate/: CMakeLists.txt  README.md  main.cxx  smpParityCases.cxx  smpParityCases.h  smpParityCompare.cxx  smpParityCompare.h
docs/: abi3-feasibility.md  build-internals.md  ci-closers.md  ci-runners.md  threading-bitexact.md  versioning.md
fvtk-config/: _modules_minimal.cmake  _nocompile_classes.cmake  _nowrap_classes.cmake  _source_unity_exclude.cmake  minimal.cmake
tests/: precision_audit.md
tools/: cvista_shim.py
(+182 files in other folders)
